# gado

./: README.md  pyproject.toml
tests/: main_test.py
