[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"

[tool.poetry.group.test.dependencies]
pre-commit = "^3.4.0"
ruff = "^0.0.292"
black = "^23.9.1"
pytest = "^7.4.2"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP"]
ignore = ["D203"]
show-source = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pylint.messages_control]
disable = "C0114,C0115,C0116"

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ['.']
